--- a/posts/how-mobile-apps-grow-business.mdx
+++ b/posts/how-mobile-apps-grow-business.mdx
@@ -1,7 +1,7 @@
 ---
 title: 5 Easy Ways a Mobile App Can Grow Your Business
 date: 2025-10-23
-author: Balaji Kailasasundaram
+author: Trimsel
 excerpt: Discover how a mobile app can help your business stand out, win
   customer loyalty, and drive more sales—even if you're not tech-savvy.
 coverImage: /images/mobile-app-growth.webp
