Update Blog Post “top-10-mobile-app-development-company-in-tirunelveli”

--- a/posts/top-10-mobile-app-development-company-in-tirunelveli.mdx
+++ b/posts/top-10-mobile-app-development-company-in-tirunelveli.mdx
@@ -1,7 +1,7 @@
 ---
 title: Top 10 Mobile App development company in Tirunelveli
 date: 2025-11-21
-author: Balaji Kailasasundaram
+author: Trimsel
 excerpt: As more businesses embrace digital systems, the demand for reliable
   Mobile App Development companies continues to rise. Tirunelveli, once known
   mainly for its traditional industries, is now emerging as a promising tech hub
