Update Blog Post “top-10-seo-companies-in-tirunelveli-find-your-perfect-digital-growth-partner”

--- a/posts/top-10-seo-companies-in-tirunelveli-find-your-perfect-digital-growth-partner.mdx
+++ b/posts/top-10-seo-companies-in-tirunelveli-find-your-perfect-digital-growth-partner.mdx
@@ -8,7 +8,8 @@ excerpt: Looking for the best SEO company in Tirunelveli? Discover the top 10
 coverImage: /images/blog/top-10-seo-companies-in-tirunelveli.png
 thumbnailUrl: /images/blog/top-10-seo-companies-in-tirunelveli.png
 tags:
-  - Digital Marketing, SEO
+  - Digital Marketing
+  - SEO
 seo:
   indexing: true
   faq:
