Update Blog Post “monolithic-vs-modern-architecture-why-your-growing-app-might-be-silently-breaking”

--- a/posts/monolithic-vs-modern-architecture-why-your-growing-app-might-be-silently-breaking.mdx
+++ b/posts/monolithic-vs-modern-architecture-why-your-growing-app-might-be-silently-breaking.mdx
@@ -57,7 +57,7 @@ seo:
       "@graph": [
         {
           "@type": "BlogPosting",
-          "@id": "https://www.trimsel.com/blog/monolithic-vs-modern-architecture#blogposting",
+          "@id": "https://www.trimsel.com/blog/monolithic-vs-modern-architecture-why-your-growing-app-might-be-silently-breaking #blogposting",
           "headline": "Monolithic vs Modern Architecture: Why Your Growing App Might Be Silently Breaking",
           "description": "Learn why monolithic apps fail under growth. Discover how modern architecture, microservices, and Kubernetes prevent crashes & reduce costs by 52%.",
           "image": [
@@ -194,8 +194,8 @@ seo:
           ],
           "contactPoint": {
             "@type": "ContactPoint",
-            "contactType": "Customer Service",
-            "telephone": "+1-XXX-XXX-XXXX",
+            "contactType": "Contact Us",
+            "telephone": "+917200841581",
             "email": "contact@trimsel.com"
           }
         },
