--- a/posts/mastering-semantic-seo-the-ultimate-digital-marketing-strategy-for-2025.mdx
+++ b/posts/mastering-semantic-seo-the-ultimate-digital-marketing-strategy-for-2025.mdx
@@ -53,8 +53,8 @@ seo:
     "@context": "https://schema.org",
       "@graph": [
         {
-          "@type": "BlogPosting",
-          "@id": "https://www.trimsel.com/blog/mastering-semantic-seo-the-ultimate-digital-marketing-strategy-for-2025 #blogposting",
+          "@type": "Article",
+          "@id": "https://www.trimsel.com/blog/mastering-semantic-seo-the-ultimate-digital-marketing-strategy-for-2025, #blogposting",
           "headline": "Mastering Semantic SEO: The Ultimate Digital Marketing Strategy for 2025",
           "description": "Semantic SEO is replacing keyword-only tactics. Get the complete 2025 guide on building topic clusters, entities & authority. Early adopters are winning..",
           "image": [
@@ -201,7 +201,7 @@ seo:
           "@id": "https://www.trimsel.com/#website",
           "url": "https://www.trimsel.com",
           "name": "Trimsel",
-          "description": Semantic SEO is replacing keyword-only tactics. Get the complete 2025 guide on building topic clusters, entities & authority. Early adopters are winning.",
+          "description": "Semantic SEO is replacing keyword-only tactics. Get the complete 2025 guide on building topic clusters, entities & authority. Early adopters are winning.",
           "publisher": {
             "@type": "Organization",
             "@id": "https://www.trimsel.com/#organization"
